fix: image size on tablet/descotp in subscribe form

--- a/css/custom.css
+++ b/css/custom.css
@@ -181,12 +181,6 @@
 	font-weight: 500;
 }
 
-@media (max-width: 1439px) {
-	.section-subscribe__heading {
-		font-size: 75rem;
-	}
-}
-
 .section-subscribe__description {
 	margin: 0;
 	margin-top: 10rem;
@@ -199,7 +193,7 @@
 	--left: 484rem;
 
 	width: calc(100% - var(--left));
-	max-width: min(62%, 1220rem);
+	max-width: min(59%, 1220rem);
 	aspect-ratio: 2.5 / 1;
 	/* height: 323rem; */
 	border-top-right-radius: 1000rem;
